# LabWorkUML

./: CMakeLists.txt  README.md
.github/workflows/: cmake.yml
Error_Lib/: CLassTError.h  CMakeLists.txt
String_Lib/: CMakeLists.txt  ClassTString.h  MethodTString.cpp
UML_App/: CMakeLists.txt  main.cpp
UML_Lib/: CMakeLists.txt  ClassTLine.h  ClassTObject.h  ClassTPoint.h  ClassTVector.h  MethodTObject.cpp  MethodTPoint.cpp
UML_Test/: CMakeLists.txt  test_UML.cpp
